# FBP_Backend

./: .cursorrules  .env.example  .gitignore  30_uses_FBP_Backend.md  ARCHITECTURAL_CONTRACT.md  ENHANCEMENTS_SUMMARY.md  EXECUTIVE_ANALYSIS_REPORT.md  FBP.code-workspace  FBP_BACKEND_SNAPSHOT.md  FBP_Backend.code-workspace  FBP_PRODUCTION_READY_SUMMARY.md  NFA_AUTOMATION_IMPLEMENTATION_SUMMARY.md  NFA_AUTOMATION_SPECIALIST_ENHANCED.md  NFA_Automation_Spec.md  NFA_CLEANUP_SUMMARY.md  NFA_FORM_FILLING_FIXES.md  NFA_SYSTEM_ARCHITECTURE.md  OPERATIONAL_QUICK_REFERENCE.md  PAGE_FRAME_SOURCE  PLAYWRIGHT_FIXES_SUMMARY.md  PROJECT_FULL_REPORT.md  README.md  README_ENHANCED.md  SUMMARY_FEYNMAN.md  data_input_final  demo.sh  iterm2_automation.sh  lojas_tests_cpfs.json  nfa_batch_processor.py  nfa_fill_exact_order.py  nfa_fill_minimal  nfa_fill_minimal.py  nfa_login_minimal.py  nfa_login_minimal_force.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  run_nfa_automation.py  run_nfa_automation.sh  (+11 more)
.cursor/: NFA_Automation_Specialist_Agent
.cursor/rules/: 00_core_apple_automation_conventions.mdc  10_redesim_email_extractor.mdc  20_nexus_workspace_ai.mdc  30_neuralforge_toolkit.mdc  (+8 more)
BACKEND_LOGIC_REPORTS/: reports_merged.md
app/: __init__.py  main.py
docs/: ARCHITECTURE_DIAGRAM.md  EXPLAINER_FOR_HUMANS.md  NFA_AUTOMATION_SPECIALIST_GUIDE.md  NFA_Automation_Spec.md  NFA_TROUBLESHOOTING.md  PRODUCTION_DEPLOYMENT.md  REDESIM_GMAIL_DRAFT_SUMMARY.md  REGRESSION_WARNINGS.md  SESSION_SUMMARY_CSV_TO_JSON_CONVERSION.md  TROUBLESHOOTING_TERMINAL_EXIT_CODE_1.md
fallback_extension/: fallback.js  manifest.json
iFrames_Chromiun/: Page_source  frame_source_listagem.html  frames_filling_page
input/: batch_example.json  batch_records.json  cpf_batch.json  cpf_batch_from_mg23.json
launch_agents/: com.fbp.backend.plist
ops/: ATF_EXPLORER_README.md  ITerm2_RUN_INSTRUCTIONS.md  ITerm2_RUN_NFA_CONSULTATION.md  NFA_FORM_FIX_SUMMARY.md  apply_iterm2_profile.sh  atf_explorer_config.yaml  atf_system_explorer.py  atf_system_explorer_advanced.py  convert_csv_to_json.py  fbp_nfa_iterm2_profile.json  generate_professional_report.py  generate_sefaz_report.py  nfa_form_diagnostic.py  nfa_live_fill_demo.py  nfa_self_test.sh  run_nfa_fast.sh  run_nfa_now.sh  stop_nfa_all.sh  validate_nfa_system.sh  validate_sefaz_access.sh
scripts/: README_STAGE2.md  activate-extension.applescript  auto-install-safari-extension.sh  create_processo_draft.py  dev.sh  install-and-activate.sh  keyboard-maestro-macro.kmmacros  n8n-workflow-example.json  nfa_consult_cli.py  run_redesim_consulta.py  run_redesim_consulta_wrapper.sh  run_redesim_stage2.py  run_redesim_stage2_only.py  run_redesim_stage2_visual.sh  setup_playwright.sh  start.sh  start_background.sh  start_prod.sh  test.sh  test_gmail_draft.py  test_redesim_gmail_draft.py  test_stage2_automation.py
tests/: test_cli_compat_api.py  test_echo.py  test_fallback_extension.py  test_health.py  test_jobs_api.py  test_nfa.py  test_nfa_real.py  test_redesim.py  test_redesim_stage2.py  test_workflows_api.py
(+209 files in other folders)
